--- a/Laundry Go Customer Site/Views/Home/Index.cshtml
+++ b/Laundry Go Customer Site/Views/Home/Index.cshtml
@@ -13,28 +13,28 @@
                 <div class="card bg-light text-dark" style="height:500px;opacity:1;">
                     <div class="card-img-overlay">
                         <h5 class="card-title">Sign In</h5>
-                        <form>
-                            <div class="row">
-                                <div class="col-lg-6">
-                                    <input type="text" class="form-control" placeholder="Name">
-                                </div>
-                                <div class="col-lg-6">
-                                    <input type="text" class="form-control" placeholder="Phone Number">
-                                </div>
-                            </div>
+                        <form  method="POST">
+													<div class="row">
+														<div class="col-lg-12">
+															<div class="from-group">
+																<input type="text" class="form-control" name="user_phone" placeholder="Phone Number">
+															</div>
+														</div>
+													</div>
                             <br>
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="from-group">
-                                        <input type="password" class="form-control" placeholder="password">
+                                        <input type="text" class="form-control" name="user_email" placeholder="Email"/>
                                     </div>
                                 </div>
                             </div>
                             <br>
                             <div class="row">
-                                <div class="col-lg-12">
-                                    <button class="btn btn-primary btn-xl js-scroll-trigger" style="width: 100%;">Let's Get Started!</button>
-                                </div>
+															<div class="col-lg-12">
+																<input type="submit" class="btn btn-primary btn-xl js-scroll-trigger" style="width: 100%;" value="Login | Register"/>
+																@*<button class="btn btn-primary btn-xl js-scroll-trigger" style="width: 100%;">Let's Get Started!</button>*@
+															</div>
                             </div>
                             <hr>
                             <div class="row">
@@ -50,7 +50,7 @@
                                     @*<a class="btn btn-block btn-xl btn-social btn-google-plus" href="#">
                                         <i class="fa fa-google-plus"></i> Sign in with Google
                                     </a>*@
-																	<button class="btn btn-block btn-xl btn-social btn-google-plus" type="button" onclick="location.href='@Url.Action("GoogleClick", "Home")'">Sign in with Google</button>
+																	<button class="btn btn-block btn-xl btn-social btn-google-plus" type="button" onclick="location.href='@Url.Action("GoogleClick", "Home")'"><i class="fa fa-google-plus"></i>Sign in with Google</button>
                                 </div>
                             </div>
                         </form>
