--- a/Laundry Go Customer Site/Views/Order_Header/Index.cshtml
+++ b/Laundry Go Customer Site/Views/Order_Header/Index.cshtml
@@ -16,175 +16,227 @@
 	<link href="../theme/dist/css/sb-admin-2.css" rel="stylesheet">
 	<!-- Custom Fonts -->
 	<link href="../theme/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
+    <style>
+        p.status{
+            font-size:10px !important;
+        }
+        
+        label{
+            font-size:10px;
+        }
+        .panel-body {
+            padding-bottom: 0px;
+        }
+        hr {
+            margin-bottom: 0px;
+        }
+        .status-active {
+            color: #337ab7;
+        }
+    </style>
 }
 <div class="row">
 	<div class="col-lg-12">
-		<h1 class="page-header">Order</h1>
+		<h1 class="page-header">Order List</h1>
 
 	</div>
 	<!-- /.col-lg-12 -->
 </div>
 <div class="row">
 	<div class="col-lg-12">
-		<div class="panel panel-default">
-			<div class="panel-heading">
-				List of Orders
-			</div>
+		
 			<!-- /.panel-heading -->
 			<div class="panel-body">
-		
-				<table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
-					<thead>
-						<tr>
-							<th>
-								@Html.DisplayNameFor(model => model.cust_id)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.cust_name)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.pickup_dri_id)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.pickup_dri_name)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.sp_id)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.sp_name)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.status_id)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.order_weight)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.order_pickup_add)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.order_deliver_add)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.deliver_dri_id)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.deliver_dri_name)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.request_time)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.awaiting_pickup_time)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.pickup_time)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.washing_time)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.washing_completed_time)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.delivering_time)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.delivered_time)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.order_amount)
-							</th>
-							<th>
-								@Html.DisplayNameFor(model => model.payment_method)
-							</th>
-							<th></th>
-						</tr>
-					</thead>
-					<tbody>
-						@foreach (var item in Model)
-						{
-						<tr>
-							<td>
-								@Html.DisplayFor(modelItem => item.cust_id)
-							</td>
-							<td>
-								@Html.DisplayFor(modelItem => item.cust_name)
-							</td>
-							<td>
-								@Html.DisplayFor(modelItem => item.pickup_dri_id)
-							</td>
-							<td>
-								@Html.DisplayFor(modelItem => item.deliver_dri_name)
-							</td>
-							<td>
-								@Html.DisplayFor(modelItem => item.sp_id)
-							</td>
-							<td>
-								@Html.DisplayFor(modelItem => item.sp_name)
-							</td>
-							<td>
-								@Html.DisplayFor(modelItem => item.status_name)
-							</td>
-							<td>
-								@Html.DisplayFor(modelItem => item.order_weight)
-							</td>
-							<td>
-								@Html.DisplayFor(modelItem => item.order_pickup_add)
-							</td>
-							<td>
-								@Html.DisplayFor(modelItem => item.order_deliver_add)
-							</td>
-							<td>
-								@Html.DisplayFor(modelItem => item.deliver_dri_id)
-							</td>
-							<td>
-								@Html.DisplayFor(modelItem => item.deliver_dri_name)
-							</td>
-							<td>
-								@Html.DisplayFor(modelItem => item.request_time)
-							</td>
-							<td>
-								@Html.DisplayFor(modelItem => item.awaiting_pickup_time)
-							</td>
-							<td>
-								@Html.DisplayFor(modelItem => item.pickup_time)
-							</td>
-							<td>
-								@Html.DisplayFor(modelItem => item.washing_time)
-							</td>
-							<td>
-								@Html.DisplayFor(modelItem => item.washing_completed_time)
-							</td>
-							<td>
-								@Html.DisplayFor(modelItem => item.delivering_time)
-							</td>
-							<td>
-								@Html.DisplayFor(modelItem => item.delivered_time)
-							</td>
-							<td>
-								@Html.DisplayFor(modelItem => item.order_amount)
-							</td>
-							<td>
-								@Html.DisplayFor(modelItem => item.payment_method)
-							</td>
-							<td>
-								@*<a asp-action="ToAwaitPickUpList" asp-route-id="@item.order_id">Answer</a>*@ 
-								@*<a asp-action="Details" asp-route-id="@item.order_id">Details</a> |
-		<a asp-action="Delete" asp-route-id="@item.order_id">Delete</a>*@
-							</td>
-						</tr>
-						}
-					</tbody>
-				</table>
-				<!-- /.table-responsive -->
 
-			</div>
-			<!-- /.panel-body -->
-		</div>
-		<!-- /.panel -->
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                <div class="content">
+                                    <div class="row">
+                                        <div class="col-xs-2 text-center">
+                                            <i class="fa fa-truck fa-2x status-active" title="Awaiting Pickup"></i>
+                                        </div>
+                                        <div class="col-xs-2 text-center status-active">
+                                            <i class="fa fa-truck fa-2x" title="Pick Up"></i>
+                                        </div>
+                                        <div class="col-xs-2 text-center status-active">
+                                            <i class="fa fa-truck fa-2x" title="Washing In Progress"></i>
+                                        </div>
+                                        <div class="col-xs-2 text-center">
+                                            <i class="fa fa-truck fa-2x" title="Washing Completed"></i>
+                                        </div>
+                                        <div class="col-xs-2 text-center">
+                                            <i class="fa fa-truck fa-2x" title="Delivering"></i>
+                                        </div>
+                                        <div class="col-xs-2 text-center">
+                                            <i class="fa fa-truck fa-2x" title="Done"></i>
+                                        </div>
+                                    </div>
+                                    <hr />
+                                    <div class="row">
+                                        <div class="col-xs-4">
+                                            <div class="form-group">
+                                                <label for="bag">Total Bag</label>
+                                                <input type="text" class="form-control" name="bag" value="5" disabled />
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-4">
+                                            <div class="form-group">
+                                                <label for="total_weight">Total Weight</label>
+                                                <input type="text" class="form-control" name="total_weight" value="34kg" disabled />
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-4">
+                                            <div class="form-group">
+                                                <label for="price">Price</label>
+                                                <input type="text" class="form-control" name="price" value="rm23.00" disabled />
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-6">
+                                            <div class="form-group">
+                                                <label for="pickup">Pickup</label>
+                                                <input type="text" class="form-control" name="pickup" value="12:00 | 12/08/18" disabled />
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-6">
+                                            <div class="form-group">
+                                                <label for="dropoff">Dropoff</label>
+                                                <input type="text" class="form-control" name="dropoff" value="12:00 | 12/08/18" disabled />
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                <div class="content">
+                                    <div class="row">
+                                        <div class="col-xs-2 text-center">
+                                            <i class="fa fa-truck fa-2x status-active" title="Awaiting Pickup"></i>
+                                        </div>
+                                        <div class="col-xs-2 text-center">
+                                            <i class="fa fa-truck fa-2x" title="Pick Up"></i>
+                                        </div>
+                                        <div class="col-xs-2 text-center">
+                                            <i class="fa fa-truck fa-2x" title="Washing In Progress"></i>
+                                        </div>
+                                        <div class="col-xs-2 text-center">
+                                            <i class="fa fa-truck fa-2x" title="Washing Completed"></i>
+                                        </div>
+                                        <div class="col-xs-2 text-center">
+                                            <i class="fa fa-truck fa-2x" title="Delivering"></i>
+                                        </div>
+                                        <div class="col-xs-2 text-center">
+                                            <i class="fa fa-truck fa-2x" title="Done"></i>
+                                        </div>
+                                    </div>
+                                    <hr />
+                                    <div class="row">
+                                        <div class="col-xs-4">
+                                            <div class="form-group">
+                                                <label for="bag">Total Bag</label>
+                                                <input type="text" class="form-control" name="bag" value="5" disabled />
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-4">
+                                            <div class="form-group">
+                                                <label for="total_weight">Total Weight</label>
+                                                <input type="text" class="form-control" name="total_weight" value="34kg" disabled />
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-4">
+                                            <div class="form-group">
+                                                <label for="price">Price</label>
+                                                <input type="text" class="form-control" name="price" value="rm23.00" disabled />
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-6">
+                                            <div class="form-group">
+                                                <label for="pickup">Pickup</label>
+                                                <input type="text" class="form-control" name="pickup" value="12:00 | 12/08/18" disabled />
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-6">
+                                            <div class="form-group">
+                                                <label for="dropoff">Dropoff</label>
+                                                <input type="text" class="form-control" name="dropoff" value="12:00 | 12/08/18" disabled />
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-md-6">
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                <div class="content">
+                                    <div class="row">
+                                        <div class="col-xs-2 text-center">
+                                            <i class="fa fa-truck fa-2x status-active" title="Awaiting Pickup"></i>
+                                        </div>
+                                        <div class="col-xs-2 text-center">
+                                            <i class="fa fa-truck fa-2x" title="Pick Up"></i>
+                                        </div>
+                                        <div class="col-xs-2 text-center">
+                                            <i class="fa fa-truck fa-2x" title="Washing In Progress"></i>
+                                        </div>
+                                        <div class="col-xs-2 text-center">
+                                            <i class="fa fa-truck fa-2x" title="Washing Completed"></i>
+                                        </div>
+                                        <div class="col-xs-2 text-center">
+                                            <i class="fa fa-truck fa-2x" title="Delivering"></i>
+                                        </div>
+                                        <div class="col-xs-2 text-center">
+                                            <i class="fa fa-truck fa-2x" title="Done"></i>
+                                        </div>
+                                    </div>
+                                    <hr />
+                                    <div class="row">
+                                        <div class="col-xs-4">
+                                            <div class="form-group">
+                                                <label for="bag">Total Bag</label>
+                                                <input type="text" class="form-control" name="bag" value="5" disabled />
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-4">
+                                            <div class="form-group">
+                                                <label for="total_weight">Total Weight</label>
+                                                <input type="text" class="form-control" name="total_weight" value="34kg" disabled />
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-4">
+                                            <div class="form-group">
+                                                <label for="price">Price</label>
+                                                <input type="text" class="form-control" name="price" value="rm23.00" disabled />
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-6">
+                                            <div class="form-group">
+                                                <label for="pickup">Pickup</label>
+                                                <input type="text" class="form-control" name="pickup" value="12:00 | 12/08/18" disabled />
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-6">
+                                            <div class="form-group">
+                                                <label for="dropoff">Dropoff</label>
+                                                <input type="text" class="form-control" name="dropoff" value="12:00 | 12/08/18" disabled />
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>                </div>
+		
+				
+
 	</div>
 	<!-- /.col-lg-12 -->
 </div>
