--- a/Laundry Go Customer Site/Views/Order_Header/Index.cshtml
+++ b/Laundry Go Customer Site/Views/Order_Header/Index.cshtml
@@ -55,22 +55,22 @@
                                 <div class="content">
                                     <div class="row">
                                         <div class="col-xs-2 text-center">
-                                            <i class="fa fa-truck fa-2x status-active" title="Awaiting Pickup"></i>
+                                            <i class="fa fa-clock-o fa-2x status-active" title="Awaiting Pickup"></i>
                                         </div>
                                         <div class="col-xs-2 text-center status-active">
                                             <i class="fa fa-truck fa-2x" title="Pick Up"></i>
                                         </div>
                                         <div class="col-xs-2 text-center status-active">
-                                            <i class="fa fa-truck fa-2x" title="Washing In Progress"></i>
+                                            <i class="fa fa-tint fa-2x" title="Washing In Progress"></i>
                                         </div>
                                         <div class="col-xs-2 text-center">
-                                            <i class="fa fa-truck fa-2x" title="Washing Completed"></i>
+                                            <i class="fa fa-tint fa-2x" title="Washing Completed"></i>
                                         </div>
                                         <div class="col-xs-2 text-center">
                                             <i class="fa fa-truck fa-2x" title="Delivering"></i>
                                         </div>
                                         <div class="col-xs-2 text-center">
-                                            <i class="fa fa-truck fa-2x" title="Done"></i>
+                                            <i class="fa fa-check-circle fa-2x" title="Done"></i>
                                         </div>
                                     </div>
                                     <hr />
@@ -116,22 +116,22 @@
                                 <div class="content">
                                     <div class="row">
                                         <div class="col-xs-2 text-center">
-                                            <i class="fa fa-truck fa-2x status-active" title="Awaiting Pickup"></i>
+                                            <i class="fa fa-clock-o fa-2x status-active" title="Awaiting Pickup"></i>
                                         </div>
                                         <div class="col-xs-2 text-center">
                                             <i class="fa fa-truck fa-2x" title="Pick Up"></i>
                                         </div>
                                         <div class="col-xs-2 text-center">
-                                            <i class="fa fa-truck fa-2x" title="Washing In Progress"></i>
+                                            <i class="fa fa-tint fa-2x" title="Washing In Progress"></i>
                                         </div>
                                         <div class="col-xs-2 text-center">
-                                            <i class="fa fa-truck fa-2x" title="Washing Completed"></i>
+                                            <i class="fa fa-tint fa-2x" title="Washing Completed"></i>
                                         </div>
                                         <div class="col-xs-2 text-center">
                                             <i class="fa fa-truck fa-2x" title="Delivering"></i>
                                         </div>
                                         <div class="col-xs-2 text-center">
-                                            <i class="fa fa-truck fa-2x" title="Done"></i>
+                                            <i class="fa fa-check-circle fa-2x" title="Done"></i>
                                         </div>
                                     </div>
                                     <hr />
@@ -179,22 +179,22 @@
                                 <div class="content">
                                     <div class="row">
                                         <div class="col-xs-2 text-center">
-                                            <i class="fa fa-truck fa-2x status-active" title="Awaiting Pickup"></i>
+                                            <i class="fa fa-clock-o fa-2x status-active" title="Awaiting Pickup"></i>
                                         </div>
-                                        <div class="col-xs-2 text-center">
+                                        <div class="col-xs-2 text-center status-active">
                                             <i class="fa fa-truck fa-2x" title="Pick Up"></i>
                                         </div>
-                                        <div class="col-xs-2 text-center">
-                                            <i class="fa fa-truck fa-2x" title="Washing In Progress"></i>
+                                        <div class="col-xs-2 text-center status-active">
+                                            <i class="fa fa-tint fa-2x" title="Washing In Progress"></i>
                                         </div>
-                                        <div class="col-xs-2 text-center">
-                                            <i class="fa fa-truck fa-2x" title="Washing Completed"></i>
+                                        <div class="col-xs-2 text-center status-active">
+                                            <i class="fa fa-tint fa-2x" title="Washing Completed"></i>
                                         </div>
-                                        <div class="col-xs-2 text-center">
+                                        <div class="col-xs-2 text-center status-active">
                                             <i class="fa fa-truck fa-2x" title="Delivering"></i>
                                         </div>
                                         <div class="col-xs-2 text-center">
-                                            <i class="fa fa-truck fa-2x" title="Done"></i>
+                                            <i class="fa fa-check-circle fa-2x" title="Done"></i>
                                         </div>
                                     </div>
                                     <hr />
