--- a/Laundry Go Customer Site/Views/Shared/_LayoutLogin.cshtml
+++ b/Laundry Go Customer Site/Views/Shared/_LayoutLogin.cshtml
@@ -154,12 +154,12 @@
 				<div class="sidebar-nav navbar-collapse">
 					<ul class="nav" id="side-menu">
 						<li><a asp-area="" asp-controller="Order_Header" asp-action="PlaceOrder"><i class="fa fa-shopping-cart"></i>Place Order</a></li>
-						<li><a asp-area="" asp-controller="Order_Header" asp-action="Index"><i class="fa fa-shopping-cart"></i>Request</a></li>
+						<li><a asp-area="" asp-controller="Order_Header" asp-action="Index"><i class="fa fa-shopping-cart"></i>Orders</a></li>
 						@*<li><a asp-area="" asp-controller="Order_Header" asp-action="AwaitPickupList"><i class="fa fa-shopping-cart"></i>Awaiting Pickup</a></li>
 		<li><a asp-area="" asp-controller="Order_Header" asp-action="PickupList"><i class="fa fa-shopping-cart"></i>Pick Up</a></li>
 		<li><a asp-area="" asp-controller="Order_Header" asp-action="WashingCompletedList"><i class="fa fa-shopping-cart"></i>Washing Completed</a></li>
 		<li><a asp-area="" asp-controller="Order_Header" asp-action="DeliveringList"><i class="fa fa-shopping-cart"></i>Delivering</a></li>*@
-						<li><a asp-area="" asp-controller="Order_Header" asp-action="DoneList"><i class="fa fa-shopping-cart"></i>Done</a></li>
+						@*<li><a asp-area="" asp-controller="Order_Header" asp-action="DoneList"><i class="fa fa-shopping-cart"></i>Done</a></li>*@
 						<li><a asp-area="" asp-controller="Home" asp-action="Logout"><i class="fa fa-sign-out "></i> Logout</a></li>
 
 					</ul>
