--- a/LaundryGoSP/Views/Order_Header/Index.cshtml
+++ b/LaundryGoSP/Views/Order_Header/Index.cshtml
@@ -169,7 +169,7 @@
 								@Html.DisplayFor(modelItem => item.payment_method)
 							</td>
 							<td>
-								<a asp-action="Done" asp-route-id="@item.order_id">Done</a>
+								<a asp-action="Done" asp-route-id="@item.order_id">Received By Service Provider</a>
 								@*<a asp-action="Edit" asp-route-id="@item.order_id">Edit</a> |
 		<a asp-action="Details" asp-route-id="@item.order_id">Details</a> |
 		<a asp-action="Delete" asp-route-id="@item.order_id">Delete</a>*@
