--- a/Laundry Go Customer Site/Views/Order_Header/Index.cshtml
+++ b/Laundry Go Customer Site/Views/Order_Header/Index.cshtml
@@ -42,203 +42,133 @@
 	</div>
 	<!-- /.col-lg-12 -->
 </div>
-<div class="row">
+
 	<div class="col-lg-12">
 		
 			<!-- /.panel-heading -->
-			<div class="panel-body">
-
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="panel panel-default">
-                            <div class="panel-body">
-                                <div class="content">
-                                    <div class="row">
-                                        <div class="col-xs-2 text-center">
-                                            <i class="fa fa-clock-o fa-2x status-active" title="Awaiting Pickup"></i>
-                                        </div>
-                                        <div class="col-xs-2 text-center status-active">
-                                            <i class="fa fa-truck fa-2x" title="Pick Up"></i>
-                                        </div>
-                                        <div class="col-xs-2 text-center status-active">
-                                            <i class="fa fa-tint fa-2x" title="Washing In Progress"></i>
-                                        </div>
-                                        <div class="col-xs-2 text-center">
-                                            <i class="fa fa-tint fa-2x" title="Washing Completed"></i>
-                                        </div>
-                                        <div class="col-xs-2 text-center">
-                                            <i class="fa fa-truck fa-2x" title="Delivering"></i>
-                                        </div>
-                                        <div class="col-xs-2 text-center">
-                                            <i class="fa fa-check-circle fa-2x" title="Done"></i>
-                                        </div>
-                                    </div>
-                                    <hr />
-                                    <div class="row">
-                                        <div class="col-xs-4">
-                                            <div class="form-group">
-                                                <label for="bag">Total Bag</label>
-                                                <input type="text" class="form-control" name="bag" value="5" disabled />
-                                            </div>
-                                        </div>
-                                        <div class="col-xs-4">
-                                            <div class="form-group">
-                                                <label for="total_weight">Total Weight</label>
-                                                <input type="text" class="form-control" name="total_weight" value="34kg" disabled />
-                                            </div>
-                                        </div>
-                                        <div class="col-xs-4">
-                                            <div class="form-group">
-                                                <label for="price">Price</label>
-                                                <input type="text" class="form-control" name="price" value="rm23.00" disabled />
-                                            </div>
-                                        </div>
-                                        <div class="col-xs-6">
-                                            <div class="form-group">
-                                                <label for="pickup">Pickup</label>
-                                                <input type="text" class="form-control" name="pickup" value="12:00 | 12/08/18" disabled />
-                                            </div>
-                                        </div>
-                                        <div class="col-xs-6">
-                                            <div class="form-group">
-                                                <label for="dropoff">Dropoff</label>
-                                                <input type="text" class="form-control" name="dropoff" value="12:00 | 12/08/18" disabled />
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="panel panel-default">
-                            <div class="panel-body">
-                                <div class="content">
-                                    <div class="row">
-                                        <div class="col-xs-2 text-center">
-                                            <i class="fa fa-clock-o fa-2x status-active" title="Awaiting Pickup"></i>
-                                        </div>
-                                        <div class="col-xs-2 text-center">
-                                            <i class="fa fa-truck fa-2x" title="Pick Up"></i>
-                                        </div>
-                                        <div class="col-xs-2 text-center">
-                                            <i class="fa fa-tint fa-2x" title="Washing In Progress"></i>
-                                        </div>
-                                        <div class="col-xs-2 text-center">
-                                            <i class="fa fa-tint fa-2x" title="Washing Completed"></i>
-                                        </div>
-                                        <div class="col-xs-2 text-center">
-                                            <i class="fa fa-truck fa-2x" title="Delivering"></i>
-                                        </div>
-                                        <div class="col-xs-2 text-center">
-                                            <i class="fa fa-check-circle fa-2x" title="Done"></i>
-                                        </div>
-                                    </div>
-                                    <hr />
-                                    <div class="row">
-                                        <div class="col-xs-4">
-                                            <div class="form-group">
-                                                <label for="bag">Total Bag</label>
-                                                <input type="text" class="form-control" name="bag" value="5" disabled />
-                                            </div>
-                                        </div>
-                                        <div class="col-xs-4">
-                                            <div class="form-group">
-                                                <label for="total_weight">Total Weight</label>
-                                                <input type="text" class="form-control" name="total_weight" value="34kg" disabled />
-                                            </div>
-                                        </div>
-                                        <div class="col-xs-4">
-                                            <div class="form-group">
-                                                <label for="price">Price</label>
-                                                <input type="text" class="form-control" name="price" value="rm23.00" disabled />
-                                            </div>
-                                        </div>
-                                        <div class="col-xs-6">
-                                            <div class="form-group">
-                                                <label for="pickup">Pickup</label>
-                                                <input type="text" class="form-control" name="pickup" value="12:00 | 12/08/18" disabled />
-                                            </div>
-                                        </div>
-                                        <div class="col-xs-6">
-                                            <div class="form-group">
-                                                <label for="dropoff">Dropoff</label>
-                                                <input type="text" class="form-control" name="dropoff" value="12:00 | 12/08/18" disabled />
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-
-                    <div class="col-md-6">
-                        <div class="panel panel-default">
-                            <div class="panel-body">
-                                <div class="content">
-                                    <div class="row">
-                                        <div class="col-xs-2 text-center">
-                                            <i class="fa fa-clock-o fa-2x status-active" title="Awaiting Pickup"></i>
-                                        </div>
-                                        <div class="col-xs-2 text-center status-active">
-                                            <i class="fa fa-truck fa-2x" title="Pick Up"></i>
-                                        </div>
-                                        <div class="col-xs-2 text-center status-active">
-                                            <i class="fa fa-tint fa-2x" title="Washing In Progress"></i>
-                                        </div>
-                                        <div class="col-xs-2 text-center status-active">
-                                            <i class="fa fa-tint fa-2x" title="Washing Completed"></i>
-                                        </div>
-                                        <div class="col-xs-2 text-center status-active">
-                                            <i class="fa fa-truck fa-2x" title="Delivering"></i>
-                                        </div>
-                                        <div class="col-xs-2 text-center">
-                                            <i class="fa fa-check-circle fa-2x" title="Done"></i>
-                                        </div>
-                                    </div>
-                                    <hr />
-                                    <div class="row">
-                                        <div class="col-xs-4">
-                                            <div class="form-group">
-                                                <label for="bag">Total Bag</label>
-                                                <input type="text" class="form-control" name="bag" value="5" disabled />
-                                            </div>
-                                        </div>
-                                        <div class="col-xs-4">
-                                            <div class="form-group">
-                                                <label for="total_weight">Total Weight</label>
-                                                <input type="text" class="form-control" name="total_weight" value="34kg" disabled />
-                                            </div>
-                                        </div>
-                                        <div class="col-xs-4">
-                                            <div class="form-group">
-                                                <label for="price">Price</label>
-                                                <input type="text" class="form-control" name="price" value="rm23.00" disabled />
-                                            </div>
-                                        </div>
-                                        <div class="col-xs-6">
-                                            <div class="form-group">
-                                                <label for="pickup">Pickup</label>
-                                                <input type="text" class="form-control" name="pickup" value="12:00 | 12/08/18" disabled />
-                                            </div>
-                                        </div>
-                                        <div class="col-xs-6">
-                                            <div class="form-group">
-                                                <label for="dropoff">Dropoff</label>
-                                                <input type="text" class="form-control" name="dropoff" value="12:00 | 12/08/18" disabled />
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>                </div>
+		<div class="panel-body">
 		
-				
+			<div class="row">
+				@foreach (var item in Model)
+				{
+					<div class="col-md-6">
+						<div class="panel panel-default">
+							<div class="panel-body">
+								<div class="content">
+									<div class="row">
+										<div class="col-xs-2 text-center">
+											<i class="fa fa-clock-o fa-2x status-active" title="Awaiting Pickup"></i>
+										</div>
 
-	</div>
-	<!-- /.col-lg-12 -->
+										@if (item.status_id >= 2)
+										{
+											<div class="col-xs-2 text-center status-active">
+												<i class="fa fa-truck fa-2x" title="Pick Up"></i>
+											</div>
+										}
+										else
+										{
+											<div class="col-xs-2 text-center">
+												<i class="fa fa-truck fa-2x" title="Pick Up"></i>
+											</div>
+										}
+										@if (item.status_id >= 3)
+										{
+											<div class="col-xs-2 text-center status-active">
+												<i class="fa fa-tint fa-2x" title="Washing In Progress"></i>
+											</div>
+										}
+										else
+										{
+											<div class="col-xs-2 text-center">
+												<i class="fa fa-tint fa-2x" title="Washing In Progress"></i>
+											</div>
+										}
+										@if (item.status_id >= 4)
+										{
+											<div class="col-xs-2 text-center status-active">
+												<i class="fa fa-tint fa-2x" title="Washing Completed"></i>
+											</div>
+										}
+										else
+										{
+											<div class="col-xs-2 text-center">
+												<i class="fa fa-tint fa-2x" title="Washing Completed"></i>
+											</div>
+										}
+										@if (item.status_id >= 5)
+										{
+											<div class="col-xs-2 text-center status-active">
+												<i class="fa fa-truck fa-2x" title="Delivering"></i>
+											</div>
+										}
+										else
+										{
+											<div class="col-xs-2 text-center">
+												<i class="fa fa-truck fa-2x" title="Delivering"></i>
+											</div>
+										}
+										@if (item.status_id >= 6)
+										{
+											<div class="col-xs-2 text-center status-active">
+												<i class="fa fa-check-circle fa-2x" title="Done"></i>
+											</div>
+										}
+										else
+										{
+											<div class="col-xs-2 text-center">
+												<i class="fa fa-check-circle fa-2x" title="Done"></i>
+											</div>
+										}
+
+										
+									</div>
+											<hr />
+											<div class="row">
+												<div class="col-xs-4">
+													<div class="form-group">
+														<label for="bag">Total Bag</label>
+														<input type="text" class="form-control" name="bag" value="@Html.DisplayFor(modelItem => item.order_bags)" disabled />
+													</div>
+												</div>
+												<div class="col-xs-4">
+													<div class="form-group">
+														<label for="total_weight">Total Weight</label>
+														<input type="text" class="form-control" name="total_weight" value="@Html.DisplayFor(modelItem => item.order_weight)kg" disabled />
+													</div>
+												</div>
+												<div class="col-xs-4">
+													<div class="form-group">
+														<label for="price">Price</label>
+														<input type="text" class="form-control" name="price" value="$ @Html.DisplayFor(modelItem => item.order_amount)" disabled />
+													</div>
+												</div>
+												<div class="col-xs-6">
+													<div class="form-group">
+														<label for="pickup">Pickup</label>
+														<input type="text" class="form-control" name="pickup" value="@Html.DisplayFor(modelItem => item.order_pickup_time)" disabled />
+													</div>
+												</div>
+												<div class="col-xs-6">
+													<div class="form-group">
+														<label for="dropoff">Dropoff</label>
+														<input type="text" class="form-control" name="dropoff" value="@Html.DisplayFor(modelItem => item.order_dropoff_time)" disabled />
+													</div>
+												</div>
+											</div>
+										</div>
+							</div>
+						</div>
+					</div>
+
+				}
+
+			</div>
+
+
+
+			</div>
+
 </div>
 @section foot{
 	<!-- DataTables JavaScript -->
