--- a/Laundry Go Customer Site/Views/Shared/_Layout.cshtml
+++ b/Laundry Go Customer Site/Views/Shared/_Layout.cshtml
@@ -3,76 +3,157 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>@ViewData["Title"] - Laundry Go!</title>
-
+	<title>@ViewData["Title"] - Go Laundry!</title>
+  <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
+  <link rel="icon" type="image/png" href="../assets/img/favicon.png">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<!-- Bootstrap core CSS -->
-	<link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<!-- <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
 	<!-- Custom fonts for this template -->
-	<link rel="stylesheet" href="../vendor/font-awesome/css/font-awesome.min.css">
+	<!-- <link rel="stylesheet" href="../vendor/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="../vendor/simple-line-icons/css/simple-line-icons.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet"> -->
 	<!-- Plugin CSS -->
-	<link rel="stylesheet" href="../device-mockups/device-mockups.min.css">
+	<!-- <link rel="stylesheet" href="../device-mockups/device-mockups.min.css"> -->
 	<!-- Custom styles for this template -->
-	<link href="../css/new-age.css" rel="stylesheet">
+	<!--<link href="../css/new-age.css" rel="stylesheet">
 	<link href="../vendor/bootstrap-social/bootstrap-social.css" rel="stylesheet">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous"> -->
+
+	<!-- New Theme -->
+	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
+  	<!--     Fonts and icons     -->
+  	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
+  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
+  	<!-- CSS Files -->
+  	<link href="../assets/css/material-kit.css?v=2.0.4" rel="stylesheet" />
+  	<!-- CSS Just for demo purpose, don't include it in your project -->
+  	<link href="../assets/demo/demo.css" rel="stylesheet" />
 
 	@RenderSection("head", false)
 </head>
-<body id="page-top">
+<body id="landing-page sidebar-collapse">
 	<!-- Navigation -->
-	<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-		<div class="container">
-			<a class="navbar-brand js-scroll-trigger" href="#page-top">Laundry Go</a>
-			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-				Menu
-				<i class="fa fa-bars"></i>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarResponsive">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item">
-						<a class="nav-link js-scroll-trigger" href="#download">Download</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link js-scroll-trigger" href="#features">Features</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
+	<nav class="navbar navbar-transparent navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100" id="sectionsNav">
+    <div class="container">
+      <div class="navbar-translate">
+        <a class="navbar-brand" href="https://demos.creative-tim.com/material-kit/index.html"><i class="material-icons">local_laundry_service</i>
+          Go Laundry </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav ml-auto">
+          <!-- <li class="dropdown nav-item">
+            <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
+              <i class="material-icons">apps</i> Components
+            </a>
+            <div class="dropdown-menu dropdown-with-icons">
+              <a href="../index.html" class="dropdown-item">
+                <i class="material-icons">layers</i> All Components
+              </a>
+              <a href="https://demos.creative-tim.com/material-kit/docs/2.0/getting-started/introduction.html" class="dropdown-item">
+                <i class="material-icons">content_paste</i> Documentation
+              </a>
+            </div>
+          </li> -->
+		  <li class="nav-item">
+            <a class="nav-link active" href="#">
+               <i class="material-icons">explore</i> DISCOVER
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">
+               <i class="material-icons">error_outline</i> FAQ
+            </a>
+          </li>
+
+          <!-- <li class="nav-item">
+            <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://twitter.com/CreativeTim" target="_blank" data-original-title="Follow us on Twitter">
+              <i class="fa fa-twitter"></i>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://www.facebook.com/CreativeTim" target="_blank" data-original-title="Like us on Facebook">
+              <i class="fa fa-facebook-square"></i>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://www.instagram.com/CreativeTimOfficial" target="_blank" data-original-title="Follow us on Instagram">
+              <i class="fa fa-instagram"></i>
+            </a>
+          </li> -->
+        </ul>
+      </div>
+    </div>
+  </nav>
 	<div>
 		@RenderBody()
-		<footer>
-			<div class="container">
-				<p>&copy; Laundry Go 2018. All Rights Reserved.</p>
-				<ul class="list-inline">
-					<li class="list-inline-item">
-						<a href="#">Privacy</a>
-					</li>
-					<li class="list-inline-item">
-						<a href="#">Terms</a>
-					</li>
-					<li class="list-inline-item">
-						<a href="#">FAQ</a>
-					</li>
-				</ul>
-			</div>
-		</footer>
+		<footer class="footer footer-default">
+    <div class="container">
+      <nav class="float-left">
+        <ul>
+          <li>
+            <a href="https://www.creative-tim.com">
+              Creative Tim
+            </a>
+          </li>
+          <li>
+            <a href="https://creative-tim.com/presentation">
+              About Us
+            </a>
+          </li>
+          <li>
+            <a href="http://blog.creative-tim.com">
+              Blog
+            </a>
+          </li>
+          <li>
+            <a href="https://www.creative-tim.com/license">
+              Licenses
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <div class="copyright float-right">
+        &copy;
+        <script>
+          document.write(new Date().getFullYear())
+        </script>, made with <i class="material-icons">favorite</i> by
+        <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a> for a better web.
+      </div>
+    </div>
+  </footer>
 	</div>
 	@RenderSection("foot", false)
 	<!-- Bootstrap core JavaScript -->
-	<script src="../vendor/jquery/jquery.min.js"></script>
-	<script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+	<!-- <script src="../vendor/jquery/jquery.min.js"></script> -->
+	<!-- <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script> -->
 	<!-- Plugin JavaScript -->
-	<script src="../vendor/jquery-easing/jquery.easing.min.js"></script>
+	<!-- <script src="../vendor/jquery-easing/jquery.easing.min.js"></script> -->
 	<!-- Custom scripts for this template -->
-	<script src="../js/new-age.min.js"></script>
+	<!-- <script src="../js/new-age.min.js"></script> -->
+
+<!-- New Theme -->
+	<!--   Core JS Files   -->
+  <script src="../assets/js/core/jquery.min.js" type="text/javascript"></script>
+  <script src="../assets/js/core/popper.min.js" type="text/javascript"></script>
+  <script src="../assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
+  <script src="../assets/js/plugins/moment.min.js"></script>
+  <!--	Plugin for the Datepicker, full documentation here: https://github.com/Eonasdan/bootstrap-datetimepicker -->
+  <script src="../assets/js/plugins/bootstrap-datetimepicker.js" type="text/javascript"></script>
+  <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
+  <script src="../assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
+  <!--	Plugin for Sharrre btn -->
+  <script src="../assets/js/plugins/jquery.sharrre.js" type="text/javascript"></script>
+  <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
+  <script src="../assets/js/material-kit.js?v=2.0.4" type="text/javascript"></script>
 
 	@RenderSection("Scripts", required: false)
 </body>
