--- a/Laundry Go Customer Site/Views/Shared/_LayoutLogin.cshtml
+++ b/Laundry Go Customer Site/Views/Shared/_LayoutLogin.cshtml
@@ -9,20 +9,31 @@
 	<meta name="author" content="">
 
 	<!-- Bootstrap Core CSS -->
-	<link href="/theme/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<!-- <link href="/theme/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
 	<!-- MetisMenu CSS -->
-	<link href="/theme/vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
+	<!-- <link href="/theme/vendor/metisMenu/metisMenu.min.css" rel="stylesheet"> -->
 	<!-- Custom CSS -->
-	<link href="/theme/dist/css/sb-admin-2.css" rel="stylesheet">
+	<!-- <link href="/theme/dist/css/sb-admin-2.css" rel="stylesheet"> -->
 	<!-- Morris Charts CSS -->
-	<link href="/theme/vendor/morrisjs/morris.css" rel="stylesheet">
+	<!-- <link href="/theme/vendor/morrisjs/morris.css" rel="stylesheet"> -->
 	<!-- Custom Fonts -->
-	<link href="/theme/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<!-- <link href="/theme/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"> -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
+
+	<!-- New theme -->
+	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
+  	<!--     Fonts and icons     -->
+  	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
+  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
+  	<!-- CSS Files -->
+  	<link href="../assets/css/material-kit.css?v=2.0.4" rel="stylesheet" />
+  	<!-- CSS Just for demo purpose, don't include it in your project -->
+  	<link href="../assets/demo/demo.css" rel="stylesheet" />
 	<title>@ViewData["Title"] - LaundryGoSP</title>
 	@RenderSection("head", false)
-	<environment include="Development">
+
+	<!-- <environment include="Development">
 		@*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
 			<link rel="stylesheet" href="~/css/site.css" />*@
 	</environment>
@@ -31,160 +42,114 @@
 						asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
 						asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
 			<link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />*@
-	</environment>
+	</environment> -->
 </head>
-<body>
-	<div id="wrapper">
+<body class="login-page sidebar-collapse">
+		
 		<!-- Navigation -->
-		<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="index.html">Laundry Go - @Context.User.Identity.Name</a>
-			</div>
-			<!-- /.navbar-header -->
-			<ul class="nav navbar-top-links navbar-right">
+	<nav class="navbar bg-info fixed-top navbar-expand-lg" color-on-scroll="100" id="sectionsNav">
+    <div class="container">
+      <div class="navbar-translate">
+        <a class="navbar-brand" href="https://demos.creative-tim.com/material-kit/index.html"><i class="material-icons">local_laundry_service</i>
+          Go Laundry </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav ml-auto">
+          <!-- <li class="dropdown nav-item">
+            <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
+              <i class="material-icons">apps</i> Components
+            </a>
+            <div class="dropdown-menu dropdown-with-icons">
+              <a href="../index.html" class="dropdown-item">
+                <i class="material-icons">layers</i> All Components
+              </a>
+              <a href="https://demos.creative-tim.com/material-kit/docs/2.0/getting-started/introduction.html" class="dropdown-item">
+                <i class="material-icons">content_paste</i> Documentation
+              </a>
+            </div>
+          </li> -->
+		  <!-- <li class="nav-item">
+            <a class="nav-link active" href="#">
+               <i class="material-icons">explore</i> DISCOVER
+            </a>
+          </li> -->
 
-				<!-- /.dropdown -->
-				<li class="dropdown">
-					<a class="dropdown-toggle" data-toggle="dropdown" href="#">
-						<i class="fa fa-tasks fa-fw"></i> <i class="fa fa-caret-down"></i>
-					</a>
-					<ul class="dropdown-menu dropdown-tasks">
-						<li>
-							<a href="#">
-								<div>
-									<p>
-										<strong>Task 1</strong>
-										<span class="pull-right text-muted">40% Complete</span>
-									</p>
-									<div class="progress progress-striped active">
-										<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-											<span class="sr-only">40% Complete (success)</span>
-										</div>
-									</div>
-								</div>
-							</a>
-						</li>
-						<li class="divider"></li>
-						<li>
-							<a href="#">
-								<div>
-									<p>
-										<strong>Task 2</strong>
-										<span class="pull-right text-muted">20% Complete</span>
-									</p>
-									<div class="progress progress-striped active">
-										<div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-											<span class="sr-only">20% Complete</span>
-										</div>
-									</div>
-								</div>
-							</a>
-						</li>
-						<li class="divider"></li>
-						<li>
-							<a href="#">
-								<div>
-									<p>
-										<strong>Task 3</strong>
-										<span class="pull-right text-muted">60% Complete</span>
-									</p>
-									<div class="progress progress-striped active">
-										<div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-											<span class="sr-only">60% Complete (warning)</span>
-										</div>
-									</div>
-								</div>
-							</a>
-						</li>
-						<li class="divider"></li>
-						<li>
-							<a href="#">
-								<div>
-									<p>
-										<strong>Task 4</strong>
-										<span class="pull-right text-muted">80% Complete</span>
-									</p>
-									<div class="progress progress-striped active">
-										<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-											<span class="sr-only">80% Complete (danger)</span>
-										</div>
-									</div>
-								</div>
-							</a>
-						</li>
-						<li class="divider"></li>
-						<li>
-							<a class="text-center" href="#">
-								<strong>See All Tasks</strong>
-								<i class="fa fa-angle-right"></i>
-							</a>
-						</li>
-					</ul>
-					<!-- /.dropdown-tasks -->
-				</li>
-				<!-- /.dropdown -->
-				<!-- /.dropdown -->
-				<li class="dropdown">
-					<a class="dropdown-toggle" data-toggle="dropdown" href="#">
-						<i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
-					</a>
-					<ul class="dropdown-menu dropdown-user">
-						<li>
-							<a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
-						</li>
-						<li>
-							<a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
-						</li>
-						<li class="divider"></li>
-						<li>
-							<a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
-						</li>
-					</ul>
-					<!-- /.dropdown-user -->
-				</li>
-				<!-- /.dropdown -->
-			</ul>
-			<!-- /.navbar-top-links -->
-			<div class="navbar-default sidebar" role="navigation">
-				<div class="sidebar-nav navbar-collapse">
-					<ul class="nav" id="side-menu">
-						<li><a asp-area="" asp-controller="Order_Header" asp-action="PlaceOrder"><i class="fa fa-shopping-cart"></i>Place Order</a></li>
-						<li><a asp-area="" asp-controller="Order_Header" asp-action="Index"><i class="fa fa-shopping-cart"></i>Request</a></li>
-						@*<li><a asp-area="" asp-controller="Order_Header" asp-action="AwaitPickupList"><i class="fa fa-shopping-cart"></i>Awaiting Pickup</a></li>
-		<li><a asp-area="" asp-controller="Order_Header" asp-action="PickupList"><i class="fa fa-shopping-cart"></i>Pick Up</a></li>
-		<li><a asp-area="" asp-controller="Order_Header" asp-action="WashingCompletedList"><i class="fa fa-shopping-cart"></i>Washing Completed</a></li>
-		<li><a asp-area="" asp-controller="Order_Header" asp-action="DeliveringList"><i class="fa fa-shopping-cart"></i>Delivering</a></li>*@
-						<li><a asp-area="" asp-controller="Order_Header" asp-action="DoneList"><i class="fa fa-shopping-cart"></i>Done</a></li>
-						<li><a asp-area="" asp-controller="Home" asp-action="Logout"><i class="fa fa-sign-out "></i> Logout</a></li>
+		  <li class="nav-item">
+			  <a asp-area="" asp-controller="Order_Header" asp-action="PlaceOrder" class="nav-link"><i class="fa fa-shopping-cart"></i>Place Order</a>
+		  </li>
+		  <li class="nav-item">
+			  <a asp-area="" asp-controller="Order_Header" asp-action="Index" class="nav-link"><i class="fa fa-shopping-cart"></i>Request</a>
+		  </li>
+          
+		  <li class="nav-item">
+			  <a asp-area="" asp-controller="Order_Header" asp-action="DoneList" class="nav-link"><i class="fa fa-shopping-cart"></i>Done</a>
+		  </li>
+		  <li class="nav-item">
+			  <a asp-area="" asp-controller="Home" asp-action="Logout" class="nav-link"><i class="fa fa-sign-out "></i> Logout</a>
+		  </li>
+		  <li class="nav-item">
+            <a class="nav-link" href="#">
+               <i class="material-icons">error_outline</i> FAQ
+            </a>
+          </li>
+          <!-- <li class="nav-item">
+            <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://twitter.com/CreativeTim" target="_blank" data-original-title="Follow us on Twitter">
+              <i class="fa fa-twitter"></i>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://www.facebook.com/CreativeTim" target="_blank" data-original-title="Like us on Facebook">
+              <i class="fa fa-facebook-square"></i>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://www.instagram.com/CreativeTimOfficial" target="_blank" data-original-title="Follow us on Instagram">
+              <i class="fa fa-instagram"></i>
+            </a>
+          </li> -->
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-					</ul>
-				</div>
-				<!-- /.sidebar-collapse -->
-			</div>
-			<!-- /.navbar-static-side -->
-		</nav>
-		<div id="page-wrapper">
+		
 			@RenderBody()
-		</div>
+		
 		<!-- /#page-wrapper -->
 	</div>
-	<script src="/theme/vendor/jquery/jquery.min.js"></script>
+	
+	<!-- <script src="/theme/vendor/jquery/jquery.min.js"></script> -->
 	<!-- Bootstrap Core JavaScript -->
-	<script src="/theme/vendor/bootstrap/js/bootstrap.min.js"></script>
+	<!-- <script src="/theme/vendor/bootstrap/js/bootstrap.min.js"></script> -->
 	<!-- Metis Menu Plugin JavaScript -->
-	<script src="/theme/vendor/metisMenu/metisMenu.min.js"></script>
+	<!-- <script src="/theme/vendor/metisMenu/metisMenu.min.js"></script> -->
 	<!-- Morris Charts JavaScript -->
-	<script src="/theme/vendor/raphael/raphael.min.js"></script>
-	<script src="/theme/vendor/morrisjs/morris.min.js"></script>
+	<!-- <script src="/theme/vendor/raphael/raphael.min.js"></script> -->
+	<!-- <script src="/theme/vendor/morrisjs/morris.min.js"></script> -->
+
+	<!-- New Theme -->
+	<!--   Core JS Files   -->
+  <script src="../assets/js/core/jquery.min.js" type="text/javascript"></script>
+  <script src="../assets/js/core/popper.min.js" type="text/javascript"></script>
+  <script src="../assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
+  <script src="../assets/js/plugins/moment.min.js"></script>
+  <!--	Plugin for the Datepicker, full documentation here: https://github.com/Eonasdan/bootstrap-datetimepicker -->
+  <script src="../assets/js/plugins/bootstrap-datetimepicker.js" type="text/javascript"></script>
+  <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
+  <script src="../assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
+  <!--	Plugin for Sharrre btn -->
+  <script src="../assets/js/plugins/jquery.sharrre.js" type="text/javascript"></script>
+  <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
+  <script src="../assets/js/material-kit.js?v=2.0.4" type="text/javascript"></script>
 	@RenderSection("foot", false)
 
-	<environment include="Development">
+	<!-- <environment include="Development">
 		@*<script src="~/lib/jquery/dist/jquery.js"></script>
 			<script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
 			<script src="~/js/site.js" asp-append-version="true"></script>*@
@@ -203,8 +168,8 @@
 							integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
 			</script>
 			<script src="~/js/site.min.js" asp-append-version="true"></script>*@
-	</environment>
-
+	</environment> -->
+	
 	@RenderSection("Scripts", required: false)
 </body>
 </html>
