--- a/Laundry Go Customer Site/Views/Order_Header/Index.cshtml
+++ b/Laundry Go Customer Site/Views/Order_Header/Index.cshtml
@@ -131,31 +131,31 @@
                                         <div class="col-4">
                                             <div class="form-group">
                                                 <label for="bag">Total Bag</label>
-                                                <input type="text" class="form-control" name="bag" value="@Html.DisplayFor(modelItem => item.order_bags)" disabled />
+                                                <input type="text" class="form-control" name="bag" value="" disabled />
                                             </div>
                                         </div>
                                         <div class="col-4">
                                             <div class="form-group">
                                                 <label for="total_weight">Total Weight</label>
-											    <input type="text" class="form-control" name="total_weight" value="@Html.DisplayFor(modelItem => item.order_weight)kg" disabled />
+											    <input type="text" class="form-control" name="total_weight" value="" disabled />
                                             </div>
                                         </div>
                                         <div class="col-4">
                                             <div class="form-group">
                                                 <label for="price">Price</label>
-												<input type="text" class="form-control" name="price" value="$ @Html.DisplayFor(modelItem => item.order_amount)" disabled />
+												<input type="text" class="form-control" name="price" value="" disabled />
                                             </div>
                                         </div>
                                         <div class="col-6">
                                             <div class="form-group">
                                                 <label for="pickup">Pickup</label>
-												<input type="text" class="form-control" name="pickup" value="@Html.DisplayFor(modelItem => item.order_pickup_time)" disabled />
+												<input type="text" class="form-control" name="pickup" value="" disabled />
                                             </div>
                                         </div>
                                         <div class="col-6">
                                             <div class="form-group">
                                                 <label for="dropoff">Dropoff</label>
-												<input type="text" class="form-control" name="dropoff" value="@Html.DisplayFor(modelItem => item.order_dropoff_time)" disabled />
+												<input type="text" class="form-control" name="dropoff" value="" disabled />
                                             </div>
                                         </div>
                                     </div>
