--- a/Laundry Go Customer Site/Views/Order_Header/PlaceOrder.cshtml
+++ b/Laundry Go Customer Site/Views/Order_Header/PlaceOrder.cshtml
@@ -45,7 +45,7 @@
                   
 									<div class="container">
 									<div class="row">
-									<div class="col-4">
+									<div class="col-md-4">
 										<h4>Bag Quantity:</h4>
 									<div class="form-group row">
 										<div class="col-xs-3"><i class="fas fa-shopping-bag fa-4x text-info"></i></div>
@@ -70,10 +70,10 @@
 									</div>
 									</div>
 									<!-- end col 6 -->
-									<div class="col-8">
+									<div class="col-md-8">
 										<h4>Type of Services:</h4>
 										<div class="row">
-											<div class="col-4">
+											<div class="col-md-4">
 												<div class="form-check">
                				 		<label class="form-check-label">
                  		 				<input class="form-check-input" type="checkbox" name="wash" value="" checked> Wash
@@ -83,7 +83,7 @@
                 					</label>
               					</div>
 											</div>
-											<div class="col-4">
+											<div class="col-md-4">
 												<div class="form-check">
                				 		<label class="form-check-label">
                  		 				<input class="form-check-input" type="checkbox" name="dry_cleaning" value=""> Dry Cleaning
@@ -93,7 +93,7 @@
                 					</label>
               					</div>
 											</div>
-											<div class="col-4">
+											<div class="col-md-4">
 												<div class="form-check">
                				 		<label class="form-check-label">
                  		 				<input class="form-check-input" type="checkbox" name="curtain" value=""> Curtain
@@ -103,7 +103,7 @@
                 					</label>
               					</div>
 											</div>
-											<div class="col-4">
+											<div class="col-md-4">
 												<div class="form-check">
                				 		<label class="form-check-label">
                  		 				<input class="form-check-input" type="checkbox" name="other" value=""> Other
